<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.notification.NotificationActivity">

    <ImageView
        android:id="@+id/img_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_25"
        android:layout_marginTop="@dimen/size_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/txt_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="@dimen/textSizeH4"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginStart="@dimen/size_10"
        app:layout_constraintStart_toEndOf="@+id/img_backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/closeNotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_notification_title"
        android:textSize="@dimen/textSizeH5"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_notification" />

    <TextView
        android:id="@+id/closeNotificationDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_notification_description"
        android:textSize="@dimen/textSizeP2"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/size_2"
        android:layout_marginStart="@dimen/size_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeNotificationTitle" />

    <Switch
        android:id="@+id/closeNotificationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/closeNotificationTitle" />


    <View
        android:id="@+id/View1"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_0.7"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_30"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeNotificationDes" />

    <TextView
        android:id="@+id/matchesNotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matches_notification_title"
        android:textSize="@dimen/textSizeH5"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View1" />

    <TextView
        android:id="@+id/matchesNotificationDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matches_notification_description"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/size_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchesNotificationTitle" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/matchesNotificationDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/matchesNotificationTitle"
         />


    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_0.7"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_30"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchesNotificationDescription" />

    <TextView
        android:id="@+id/newsNotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_notification_title"
        android:textSize="@dimen/textSizeH5"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/newsNotificationDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_notification_description"
        android:textSize="@dimen/textSizeP2"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsNotificationTitle" />


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/newsNotificationDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newsNotificationTitle" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_0.7"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_30"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsNotificationDescription" />

    <TextView
        android:id="@+id/VideoNotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videos_notification_title"
        android:textSize="@dimen/textSizeH5"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginStart="@dimen/size_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/VideoNotificationDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videos_notification_description"
        android:textSize="@dimen/textSizeP2"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/size_2"
        android:layout_marginStart="@dimen/size_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VideoNotificationTitle" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/VideoNotificationDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/VideoNotificationTitle" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_0.7"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_30"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VideoNotificationDescription" />

    <TextView
        android:id="@+id/importantNotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important_notification_title"
        android:textSize="@dimen/textSizeH5"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginStart="@dimen/size_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/important_notification_description"
        android:textSize="@dimen/textSizeP2"
        android:layout_marginTop="@dimen/size_2"
        android:layout_marginStart="@dimen/size_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importantNotificationTitle" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/importantNotificationTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>